Fixed logo distortion for PIRATE-4922

--- a/less/theme.less
+++ b/less/theme.less
@@ -156,14 +156,6 @@ body {
     }
 }
 
-.logo-image {
-    max-height: 200px;
-
-    @media @tablet {
-        max-height: none;
-    }
-}
-
 
 
 
